--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,12 @@
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600");
+@import url("https://fonts.googleapis.com/css?family=Aldrich:200,300,400,500,600");
 /*
 	Industrious by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 */
+
 /* Basic */
 @-ms-viewport {
   width: device-width; }
@@ -105,7 +107,7 @@ body {
   color: #444444; }
 
 body, input, select, textarea {
-  font-family: "Raleway", Arial, Helvetica, sans-serif;
+  font-family: "Aldrich", Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.65; }
